add tmux number

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -85,7 +85,7 @@ set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @tmux-dotbar-position top
 set -g @tmux-dotbar-justify "absolute-centre"
 set -g @tmux-dotbar-right true
-# set -g @tmux-dotbar-window-status-format " • #W "
+set -g @tmux-dotbar-window-status-format " #I:#W "
 # set-window-option -g window-status-separator "#[fg=#282828] • "
 set-window-option -g window-status-separator ""
 
