add obsidianMux keybind

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -98,7 +98,8 @@ set -g @tmux-dotbar-fg-prefix "#7aa2f7"  # Tokyo Night Storm purple
 
 # Custom Binds
 bind t display-popup -w 90% -h 80% -x C -y C -E 'todoist'
-bind-key n new-window '~/scripts/obsidian_mux.sh'
+bind-key n new-window '~/scripts/obsidian_mux.sh --window'
+bind-key N new-window '~/scripts/obsidian_mux.sh'
 
 
 bind-key "o" display-popup -E -w 40% "sesh connect \"$(
